# dekyc-protocol

./: .gitignore  README.md  README_RU.md  docker-compose.yml  example-readme.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test.json
.github/workflows/: ci-apps.yml  ci-solana.yml
apps/api/: .env.example  .gitignore  eslint.config.mjs  package.json
apps/api/idl/: 12permission_protocol.json  permission_protocol.json
apps/api/prisma/: schema.prisma
apps/energy-api/: .env.example  .gitignore  eslint.config.mjs  package.json  tsconfig.build.json  tsconfig.json
apps/energy-web/: .env.local.example  eslint.config.mjs  package.json  tsconfig.json
apps/platform/: .env.local.example  eslint.config.mjs  next.config.ts  package.json
docs/: DeKYC.md  ENERGY.md  ENERGY_RU.md  api.md  architecture.md  architecture_RU.md  product.md  roadmap.md
programs/permission_protocol/: Anchor.toml  package-lock.json
programs/permission_protocol/programs/tokenization_case/: Cargo.toml
programs/permission_protocol/programs/tokenization_case/src/: constants.rs  errors.rs  events.rs  lib.rs
programs/permission_protocol/programs/tokenization_case/src/instructions/: buy_shares.rs  claim_payout.rs  create_energy_asset.rs  create_listing.rs  create_registry.rs  create_revenue_epoch.rs  fill_listing.rs  issue_shares.rs  mod.rs
programs/permission_protocol/programs/tokenization_case/src/state/: claim_receipt.rs  energy_asset.rs  enums.rs  investor_position.rs  listing.rs  mod.rs  registry.rs  revenue_epoch.rs
programs/tokenization_case/: package.json
(+400 files in other folders)
