[package]
name = "tokenization_case"
version = "0.1.0"
description = "DeKYC Energy Rights Exchange tokenization program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tokenization_case"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []


[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token_2022"] }